// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`rotate3D renders 0 1`] = `
Array [
  .c0 {
  -webkit-transform: rotate3d(0);
  -ms-transform: rotate3d(0);
  transform: rotate3d(0);
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-transform: rotate3d(0);
  -ms-transform: rotate3d(0);
  transform: rotate3d(0);
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-transform: rotate3d(0);
  -ms-transform: rotate3d(0);
  transform: rotate3d(0);
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-transform: rotate3d(0);
  -ms-transform: rotate3d(0);
  transform: rotate3d(0);
}

<div
    className="c0"
  />,
]
`;

exports[`rotate3D renders function 1`] = `
Array [
  .c0 {
  -webkit-transform: rotate3d(hasnot);
  -ms-transform: rotate3d(hasnot);
  transform: rotate3d(hasnot);
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-transform: rotate3d(has);
  -ms-transform: rotate3d(has);
  transform: rotate3d(has);
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-transform: rotate3d(hasnot);
  -ms-transform: rotate3d(hasnot);
  transform: rotate3d(hasnot);
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-transform: rotate3d(has);
  -ms-transform: rotate3d(has);
  transform: rotate3d(has);
}

<div
    className="c0"
  />,
]
`;

exports[`rotate3D renders invalid theme path 1`] = `
Array [
  .c0 {
  -webkit-transform: rotate3d(invalid.path.1);
  -ms-transform: rotate3d(invalid.path.1);
  transform: rotate3d(invalid.path.1);
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-transform: rotate3d(invalid.path.1);
  -ms-transform: rotate3d(invalid.path.1);
  transform: rotate3d(invalid.path.1);
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-transform: rotate3d(invalid.path.1);
  -ms-transform: rotate3d(invalid.path.1);
  transform: rotate3d(invalid.path.1);
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-transform: rotate3d(invalid.path.1);
  -ms-transform: rotate3d(invalid.path.1);
  transform: rotate3d(invalid.path.1);
}

<div
    className="c0"
  />,
]
`;

exports[`rotate3D renders negative number 1`] = `
Array [
  .c0 {
  -webkit-transform: rotate3d(-54881);
  -ms-transform: rotate3d(-54881);
  transform: rotate3d(-54881);
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-transform: rotate3d(-54881);
  -ms-transform: rotate3d(-54881);
  transform: rotate3d(-54881);
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-transform: rotate3d(-42365);
  -ms-transform: rotate3d(-42365);
  transform: rotate3d(-42365);
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-transform: rotate3d(-42365);
  -ms-transform: rotate3d(-42365);
  transform: rotate3d(-42365);
}

<div
    className="c0"
  />,
]
`;

exports[`rotate3D renders object [breakpoints + standard] 1`] = `
Array [
  .c0 {
  -webkit-transform: rotate3d(July);
  -ms-transform: rotate3d(July);
  transform: rotate3d(July);
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-transform: rotate3d(August);
    -ms-transform: rotate3d(August);
    transform: rotate3d(August);
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-transform: rotate3d(September);
    -ms-transform: rotate3d(September);
    transform: rotate3d(September);
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-transform: rotate3d(November);
    -ms-transform: rotate3d(November);
    transform: rotate3d(November);
  }
}

@media screen and (min-width:August) {
  .c0 {
    -webkit-transform: rotate3d(August);
    -ms-transform: rotate3d(August);
    transform: rotate3d(August);
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  .c0 {
  -webkit-transform: rotate3d(July);
  -ms-transform: rotate3d(July);
  transform: rotate3d(July);
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-transform: rotate3d(August);
    -ms-transform: rotate3d(August);
    transform: rotate3d(August);
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-transform: rotate3d(September);
    -ms-transform: rotate3d(September);
    transform: rotate3d(September);
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-transform: rotate3d(November);
    -ms-transform: rotate3d(November);
    transform: rotate3d(November);
  }
}

@media screen and (min-width:August) {
  .c0 {
    -webkit-transform: rotate3d(August);
    -ms-transform: rotate3d(August);
    transform: rotate3d(August);
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  .c0 {
  -webkit-transform: rotate3d(January);
  -ms-transform: rotate3d(January);
  transform: rotate3d(January);
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    -webkit-transform: rotate3d(December);
    -ms-transform: rotate3d(December);
    transform: rotate3d(December);
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-transform: rotate3d(April);
    -ms-transform: rotate3d(April);
    transform: rotate3d(April);
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-transform: rotate3d(May);
    -ms-transform: rotate3d(May);
    transform: rotate3d(May);
  }
}

@media screen and (min-width:August) {
  .c0 {
    -webkit-transform: rotate3d(June);
    -ms-transform: rotate3d(June);
    transform: rotate3d(June);
  }
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-transform: rotate3d(January);
  -ms-transform: rotate3d(January);
  transform: rotate3d(January);
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    -webkit-transform: rotate3d(December);
    -ms-transform: rotate3d(December);
    transform: rotate3d(December);
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-transform: rotate3d(April);
    -ms-transform: rotate3d(April);
    transform: rotate3d(April);
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-transform: rotate3d(May);
    -ms-transform: rotate3d(May);
    transform: rotate3d(May);
  }
}

@media screen and (min-width:August) {
  .c0 {
    -webkit-transform: rotate3d(June);
    -ms-transform: rotate3d(June);
    transform: rotate3d(June);
  }
}

<div
    className="c0"
  />,
]
`;

exports[`rotate3D renders object [breakpoints] 1`] = `
Array [
  @media screen and (min-width:November) {
  .c0 {
    -webkit-transform: rotate3d(July);
    -ms-transform: rotate3d(July);
    transform: rotate3d(July);
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-transform: rotate3d(August);
    -ms-transform: rotate3d(August);
    transform: rotate3d(August);
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-transform: rotate3d(September);
    -ms-transform: rotate3d(September);
    transform: rotate3d(September);
  }
}

@media screen and (min-width:August) {
  .c0 {
    -webkit-transform: rotate3d(November);
    -ms-transform: rotate3d(November);
    transform: rotate3d(November);
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {
  .c0 {
    -webkit-transform: rotate3d(July);
    -ms-transform: rotate3d(July);
    transform: rotate3d(July);
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-transform: rotate3d(August);
    -ms-transform: rotate3d(August);
    transform: rotate3d(August);
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-transform: rotate3d(September);
    -ms-transform: rotate3d(September);
    transform: rotate3d(September);
  }
}

@media screen and (min-width:August) {
  .c0 {
    -webkit-transform: rotate3d(November);
    -ms-transform: rotate3d(November);
    transform: rotate3d(November);
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    -webkit-transform: rotate3d(May);
    -ms-transform: rotate3d(May);
    transform: rotate3d(May);
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-transform: rotate3d(June);
    -ms-transform: rotate3d(June);
    transform: rotate3d(June);
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-transform: rotate3d(April);
    -ms-transform: rotate3d(April);
    transform: rotate3d(April);
  }
}

@media screen and (min-width:August) {
  .c0 {
    -webkit-transform: rotate3d(November);
    -ms-transform: rotate3d(November);
    transform: rotate3d(November);
  }
}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    -webkit-transform: rotate3d(May);
    -ms-transform: rotate3d(May);
    transform: rotate3d(May);
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-transform: rotate3d(June);
    -ms-transform: rotate3d(June);
    transform: rotate3d(June);
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-transform: rotate3d(April);
    -ms-transform: rotate3d(April);
    transform: rotate3d(April);
  }
}

@media screen and (min-width:August) {
  .c0 {
    -webkit-transform: rotate3d(November);
    -ms-transform: rotate3d(November);
    transform: rotate3d(November);
  }
}

<div
    className="c0"
  />,
]
`;

exports[`rotate3D renders object [mediaQueries + standart] 1`] = `
Array [
  .c0 {
  -webkit-transform: rotate3d(July);
  -ms-transform: rotate3d(July);
  transform: rotate3d(July);
}

@media May {
  .c0 {
    -webkit-transform: rotate3d(August);
    -ms-transform: rotate3d(August);
    transform: rotate3d(August);
  }
}

@media April {
  .c0 {
    -webkit-transform: rotate3d(September);
    -ms-transform: rotate3d(September);
    transform: rotate3d(September);
  }
}

@media January {
  .c0 {
    -webkit-transform: rotate3d(November);
    -ms-transform: rotate3d(November);
    transform: rotate3d(November);
  }
}

@media April {
  .c0 {
    -webkit-transform: rotate3d(August);
    -ms-transform: rotate3d(August);
    transform: rotate3d(August);
  }
}

@media June {
  .c0 {
    -webkit-transform: rotate3d(November);
    -ms-transform: rotate3d(November);
    transform: rotate3d(November);
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  .c0 {
  -webkit-transform: rotate3d(July);
  -ms-transform: rotate3d(July);
  transform: rotate3d(July);
}

@media May {
  .c0 {
    -webkit-transform: rotate3d(August);
    -ms-transform: rotate3d(August);
    transform: rotate3d(August);
  }
}

@media April {
  .c0 {
    -webkit-transform: rotate3d(September);
    -ms-transform: rotate3d(September);
    transform: rotate3d(September);
  }
}

@media January {
  .c0 {
    -webkit-transform: rotate3d(November);
    -ms-transform: rotate3d(November);
    transform: rotate3d(November);
  }
}

@media April {
  .c0 {
    -webkit-transform: rotate3d(August);
    -ms-transform: rotate3d(August);
    transform: rotate3d(August);
  }
}

@media June {
  .c0 {
    -webkit-transform: rotate3d(November);
    -ms-transform: rotate3d(November);
    transform: rotate3d(November);
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  .c0 {
  -webkit-transform: rotate3d(April);
  -ms-transform: rotate3d(April);
  transform: rotate3d(April);
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    -webkit-transform: rotate3d(November);
    -ms-transform: rotate3d(November);
    transform: rotate3d(November);
  }
}

@media April {
  .c0 {
    -webkit-transform: rotate3d(January);
    -ms-transform: rotate3d(January);
    transform: rotate3d(January);
  }
}

@media January {
  .c0 {
    -webkit-transform: rotate3d(December);
    -ms-transform: rotate3d(December);
    transform: rotate3d(December);
  }
}

@media April {
  .c0 {
    -webkit-transform: rotate3d(April);
    -ms-transform: rotate3d(April);
    transform: rotate3d(April);
  }
}

@media June {
  .c0 {
    -webkit-transform: rotate3d(May);
    -ms-transform: rotate3d(May);
    transform: rotate3d(May);
  }
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-transform: rotate3d(April);
  -ms-transform: rotate3d(April);
  transform: rotate3d(April);
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    -webkit-transform: rotate3d(November);
    -ms-transform: rotate3d(November);
    transform: rotate3d(November);
  }
}

@media April {
  .c0 {
    -webkit-transform: rotate3d(January);
    -ms-transform: rotate3d(January);
    transform: rotate3d(January);
  }
}

@media January {
  .c0 {
    -webkit-transform: rotate3d(December);
    -ms-transform: rotate3d(December);
    transform: rotate3d(December);
  }
}

@media April {
  .c0 {
    -webkit-transform: rotate3d(April);
    -ms-transform: rotate3d(April);
    transform: rotate3d(April);
  }
}

@media June {
  .c0 {
    -webkit-transform: rotate3d(May);
    -ms-transform: rotate3d(May);
    transform: rotate3d(May);
  }
}

<div
    className="c0"
  />,
]
`;

exports[`rotate3D renders object [mediaQueries] 1`] = `
Array [
  @media May {
  .c0 {
    -webkit-transform: rotate3d(July);
    -ms-transform: rotate3d(July);
    transform: rotate3d(July);
  }
}

@media April {
  .c0 {
    -webkit-transform: rotate3d(August);
    -ms-transform: rotate3d(August);
    transform: rotate3d(August);
  }
}

@media January {
  .c0 {
    -webkit-transform: rotate3d(September);
    -ms-transform: rotate3d(September);
    transform: rotate3d(September);
  }
}

@media April {
  .c0 {
    -webkit-transform: rotate3d(November);
    -ms-transform: rotate3d(November);
    transform: rotate3d(November);
  }
}

@media June {
  .c0 {
    -webkit-transform: rotate3d(August);
    -ms-transform: rotate3d(August);
    transform: rotate3d(August);
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {
  .c0 {
    -webkit-transform: rotate3d(July);
    -ms-transform: rotate3d(July);
    transform: rotate3d(July);
  }
}

@media April {
  .c0 {
    -webkit-transform: rotate3d(August);
    -ms-transform: rotate3d(August);
    transform: rotate3d(August);
  }
}

@media January {
  .c0 {
    -webkit-transform: rotate3d(September);
    -ms-transform: rotate3d(September);
    transform: rotate3d(September);
  }
}

@media April {
  .c0 {
    -webkit-transform: rotate3d(November);
    -ms-transform: rotate3d(November);
    transform: rotate3d(November);
  }
}

@media June {
  .c0 {
    -webkit-transform: rotate3d(August);
    -ms-transform: rotate3d(August);
    transform: rotate3d(August);
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    -webkit-transform: rotate3d(January);
    -ms-transform: rotate3d(January);
    transform: rotate3d(January);
  }
}

@media April {
  .c0 {
    -webkit-transform: rotate3d(December);
    -ms-transform: rotate3d(December);
    transform: rotate3d(December);
  }
}

@media January {
  .c0 {
    -webkit-transform: rotate3d(April);
    -ms-transform: rotate3d(April);
    transform: rotate3d(April);
  }
}

@media April {
  .c0 {
    -webkit-transform: rotate3d(May);
    -ms-transform: rotate3d(May);
    transform: rotate3d(May);
  }
}

@media June {
  .c0 {
    -webkit-transform: rotate3d(June);
    -ms-transform: rotate3d(June);
    transform: rotate3d(June);
  }
}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    -webkit-transform: rotate3d(January);
    -ms-transform: rotate3d(January);
    transform: rotate3d(January);
  }
}

@media April {
  .c0 {
    -webkit-transform: rotate3d(December);
    -ms-transform: rotate3d(December);
    transform: rotate3d(December);
  }
}

@media January {
  .c0 {
    -webkit-transform: rotate3d(April);
    -ms-transform: rotate3d(April);
    transform: rotate3d(April);
  }
}

@media April {
  .c0 {
    -webkit-transform: rotate3d(May);
    -ms-transform: rotate3d(May);
    transform: rotate3d(May);
  }
}

@media June {
  .c0 {
    -webkit-transform: rotate3d(June);
    -ms-transform: rotate3d(June);
    transform: rotate3d(June);
  }
}

<div
    className="c0"
  />,
]
`;

exports[`rotate3D renders postitive number 1`] = `
Array [
  .c0 {
  -webkit-transform: rotate3d(54881);
  -ms-transform: rotate3d(54881);
  transform: rotate3d(54881);
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-transform: rotate3d(54881);
  -ms-transform: rotate3d(54881);
  transform: rotate3d(54881);
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-transform: rotate3d(42365);
  -ms-transform: rotate3d(42365);
  transform: rotate3d(42365);
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-transform: rotate3d(42365);
  -ms-transform: rotate3d(42365);
  transform: rotate3d(42365);
}

<div
    className="c0"
  />,
]
`;

exports[`rotate3D renders string 1`] = `
Array [
  .c0 {
  -webkit-transform: rotate3d(July);
  -ms-transform: rotate3d(July);
  transform: rotate3d(July);
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-transform: rotate3d(July);
  -ms-transform: rotate3d(July);
  transform: rotate3d(July);
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-transform: rotate3d(June);
  -ms-transform: rotate3d(June);
  transform: rotate3d(June);
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-transform: rotate3d(June);
  -ms-transform: rotate3d(June);
  transform: rotate3d(June);
}

<div
    className="c0"
  />,
]
`;

exports[`rotate3D renders undefined 1`] = `
Array [
  <div
    className=""
  />,
  <div
    className=""
  />,
  <div
    className=""
  />,
  <div
    className=""
  />,
]
`;

exports[`rotate3D renders valid theme path 1`] = `
Array [
  .c0 {
  -webkit-transform: rotate3d(DarkSlateBlue);
  -ms-transform: rotate3d(DarkSlateBlue);
  transform: rotate3d(DarkSlateBlue);
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-transform: rotate3d(DarkSlateBlue);
  -ms-transform: rotate3d(DarkSlateBlue);
  transform: rotate3d(DarkSlateBlue);
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-transform: rotate3d(DarkSlateBlue);
  -ms-transform: rotate3d(DarkSlateBlue);
  transform: rotate3d(DarkSlateBlue);
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-transform: rotate3d(DarkSlateBlue);
  -ms-transform: rotate3d(DarkSlateBlue);
  transform: rotate3d(DarkSlateBlue);
}

<div
    className="c0"
  />,
]
`;
